--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FoosballTable</title>
+  <title>Foosball Table</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style type="text/css">
+    .initial-loader {
+      display: block;
+      position: absolute;
+      top: 50vh;
+      left: 50vw;
+      width: 100px;
+      height: 50px;
+      margin: -25px 0 0 -50px;
+    }
+  </style>
+
 </head>
 <body>
-  <foosball-root></foosball-root>
+  <foosball-root>
+    <p class="initial-loader">Loading...</p>
+  </foosball-root>
 </body>
 </html>
